favourites should work now

--- a/CapoeiraLyrics/res/values/strings.xml
+++ b/CapoeiraLyrics/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Capoeira Lyrics</string>
-    <string name="activity_name">Capoeira Lyrics: Main</string>
+    <string name="activity_name">Capoeira Lyrics</string>
 </resources>
