--- a/CapoeiraLyrics/res/values/strings.xml
+++ b/CapoeiraLyrics/res/values/strings.xml
@@ -1,4 +1,15 @@
 <resources>
     <string name="app_name">Capoeira Lyrics</string>
     <string name="activity_name">Capoeira Lyrics</string>
+
+    <string name="msg_update_available">New songs available! Do you want to load?</string>
+    <string name="msg_update_progress">Loading songs...</string>
+    <string name="msg_update_complete">songs loaded</string>
+    <string name="msg_update_failed">Can\'t load songs! Check network connection and try again!</string>
+    <string name="msg_no_favorites">You have no favorite songs!</string>
+    <string name="msg_title_update_available">Update available</string>
+    <string name="btn_title_download">Download</string>
+    <string name="btn_title_cancel">Cancel</string>
+    <string name="msg_pattern_are_you_sure_to_download">About %.1f Mb will be loaded. Continue?</string>
+    <string name="msg_pattern_update_available">New songs available! Do you want to load about %.1f Mb?</string>
 </resources>
